--- a/UI/qtWDWInventarios.ui
+++ b/UI/qtWDWInventarios.ui
@@ -6,66 +6,217 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>601</width>
-    <height>415</height>
+    <width>548</width>
+    <height>508</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1282</width>
+    <height>16777215</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>CDP || Inventarios</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>47</width>
-     <height>13</height>
+     <x>-80</x>
+     <y>-70</y>
+     <width>1371</width>
+     <height>661</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Bodega</string>
+   <property name="styleSheet">
+    <string notr="true">QFrame{
+background-color:rgb(53, 53, 79);
+}
+
+QPushButton{
+font:87 12pt &quot;Arial Black&quot;;
+background-color:#000000ff;
+color:rgb(20, 200, 220);
+border-radius:5px;
+border:1px solid white;
+
+}
+
+QPushButton:hover{
+background-color:black;
+}
+QLabel{
+font:87 12pt &quot;Arial Black&quot;;
+background-color:#000000ff;
+color:rgb(20, 200, 220);
+border-radius:5px;
+border:1px solid white;
+}
+
+QComboBox{
+font:87 12pt &quot;Arial Black&quot;;
+background-color:#000000ff;
+color:rgb(20, 200, 220);
+border-radius:5px;
+border:1px solid white;
+}
+
+QTableWidget{
+font:87 12pt &quot;Arial Black&quot;;
+background-color:#000000ff;
+color:rgb(20, 200, 220);
+border-radius:5px;
+border:1px solid white;
+border:1px solid white;
+}</string>
    </property>
-  </widget>
-  <widget class="QComboBox" name="comboBox">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>10</y>
-     <width>131</width>
-     <height>22</height>
-    </rect>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
    </property>
-  </widget>
-  <widget class="QTableWidget" name="tableWidget">
-   <property name="geometry">
-    <rect>
-     <x>240</x>
-     <y>10</y>
-     <width>311</width>
-     <height>381</height>
-    </rect>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
    </property>
-   <property name="rowCount">
-    <number>0</number>
-   </property>
-   <property name="columnCount">
-    <number>3</number>
-   </property>
-   <column>
-    <property name="text">
-     <string>Nombre</string>
+   <widget class="QTableWidget" name="tableWidget">
+    <property name="geometry">
+     <rect>
+      <x>286</x>
+      <y>102</y>
+      <width>301</width>
+      <height>431</height>
+     </rect>
     </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Precio</string>
+    <property name="styleSheet">
+     <string notr="true">background:rgb(0, 0, 0)
+</string>
     </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>Cantidad</string>
+    <property name="rowCount">
+     <number>0</number>
     </property>
-   </column>
+    <property name="columnCount">
+     <number>3</number>
+    </property>
+    <column>
+     <property name="text">
+      <string>Nombre</string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial Black</family>
+       <pointsize>12</pointsize>
+       <weight>50</weight>
+       <italic>false</italic>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="background">
+      <color>
+       <red>0</red>
+       <green>0</green>
+       <blue>0</blue>
+      </color>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>20</red>
+        <green>200</green>
+        <blue>220</blue>
+       </color>
+      </brush>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Precio</string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial Black</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="background">
+      <color>
+       <red>0</red>
+       <green>0</green>
+       <blue>0</blue>
+      </color>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>20</red>
+        <green>200</green>
+        <blue>220</blue>
+       </color>
+      </brush>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Cantidad</string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial Black</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="background">
+      <color>
+       <red>0</red>
+       <green>0</green>
+       <blue>0</blue>
+      </color>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>20</red>
+        <green>200</green>
+        <blue>220</blue>
+       </color>
+      </brush>
+     </property>
+    </column>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>100</y>
+      <width>190</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background:rgb(0, 0, 0)
+</string>
+       </property>
+       <property name="text">
+        <string>Bodega:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBox">
+       <property name="styleSheet">
+        <string notr="true">background:rgb(0, 0, 0)</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
  </widget>
  <resources/>
