--- a/UI/qtWDWRegistroDeArticulos.ui
+++ b/UI/qtWDWRegistroDeArticulos.ui
@@ -6,107 +6,207 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>414</width>
+    <height>317</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>CDP || Registro De Articulos</string>
   </property>
-  <widget class="QPushButton" name="qtBTNAgregarArticulo">
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>220</y>
-     <width>111</width>
-     <height>23</height>
+     <x>0</x>
+     <y>0</y>
+     <width>811</width>
+     <height>731</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Agregar Articulo</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="qtBTNLimpiar">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>220</y>
-     <width>111</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Limpiar</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>30</y>
-     <width>47</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Nombre</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="qtTXTNombre">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>30</y>
-     <width>251</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>80</y>
-     <width>47</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Precio</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="qtTXTPrecio">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>80</y>
-     <width>251</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>130</y>
-     <width>47</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Cantidad</string>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="qtSPNSpinCantidad">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>120</y>
-     <width>42</width>
-     <height>22</height>
-    </rect>
-   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QFrame" name="frame">
+      <property name="styleSheet">
+       <string notr="true">QFrame{
+background-color:rgb(53, 53, 79);
+}
+
+QPushButton{
+font:87 12pt &quot;Arial Black&quot;;
+background-color:#000000ff;
+color:rgb(20, 200, 220);
+border-radius:5px;
+border:1px solid white;
+
+}
+
+QPushButton:hover{
+background-color:black;
+}
+
+QLabel{
+font:87 12pt &quot;Arial Black&quot;;
+background-color:#000000ff;
+color:rgb(20, 200, 220);
+border-radius:5px;
+border:1px solid white;
+}
+
+QSpinBox{
+font:87 12pt &quot;Arial Black&quot;;
+background-color:#000000ff;
+color:rgb(20, 200, 220);
+border-radius:5px;
+border:1px solid white;
+}</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <widget class="QLabel" name="label">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>30</y>
+         <width>151</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background:black</string>
+       </property>
+       <property name="text">
+        <string>Nombre:</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_2">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>80</y>
+         <width>151</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background:black</string>
+       </property>
+       <property name="text">
+        <string>Precio:</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_3">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>120</y>
+         <width>151</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background:black</string>
+       </property>
+       <property name="text">
+        <string>Cantidad:</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="qtBTNAgregarArticulo">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>220</y>
+         <width>166</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background:black</string>
+       </property>
+       <property name="text">
+        <string>Agregar Articulo</string>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../../Downloads/shopping-cart (2).svg</normaloff>../../Downloads/shopping-cart (2).svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>15</width>
+         <height>15</height>
+        </size>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="qtTXTNombre">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>30</y>
+         <width>166</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="qtBTNLimpiar">
+       <property name="geometry">
+        <rect>
+         <x>250</x>
+         <y>220</y>
+         <width>88</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background:black</string>
+       </property>
+       <property name="text">
+        <string>Limpiar</string>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../../Downloads/book.svg</normaloff>../../Downloads/book.svg</iconset>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="qtSPNSpinCantidad">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>120</y>
+         <width>121</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background:black</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="qtTXTPrecio">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>80</y>
+         <width>133</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
