--- a/UI/qtWDWRegistroDeArticulos.ui
+++ b/UI/qtWDWRegistroDeArticulos.ui
@@ -232,6 +232,9 @@ border:1px solid white;
          <height>22</height>
         </rect>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </widget>
     </item>
