--- a/UI/qtMainWindow.ui
+++ b/UI/qtMainWindow.ui
@@ -98,7 +98,7 @@ background-color:black;
            <string notr="true">background-color:rgb(0, 0, 0)</string>
           </property>
           <property name="text">
-           <string>Modificar Inventarios</string>
+           <string>Inventarios</string>
           </property>
           <property name="icon">
            <iconset>
